[package]
name = "flash_easy_sol"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "1.14"
solana-client = "1.14"
solana-program = "1.14"
anchor-lang = "0.28"
anchor-spl = "0.28"
tokio = { version = "1.32", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
blake3 = { version = "1.5.4", features = ["digest", "traits-preview"] }
